# Arcbit

./: .gitignore  BLUEPRINT.md  CMakeLists.txt  CMakePresets.json  README.md  jsonspec.md  vcpkg.json
backends/vulkan/: CMakeLists.txt
backends/vulkan/src/: VmaImpl.cpp  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp
core/: CMakeLists.txt
core/include/arcbit/core/: Assert.h  Log.h  Profiler.h  Types.h
core/src/: Log.cpp
docs/: ecs.md  editor.md  gui.md  physics.md  sprite-format.md  tilemap.md
engine/: CMakeLists.txt
engine/assets/locale/: en.json
engine/assets/skins/: default.skin.json
engine/assets/ui/: audio_settings.arcui  graphics_settings.arcui  input_rebind.arcui  main_menu.arcui  pause_menu.arcui
engine/include/arcbit/: arcbit.h  arcbit.hpp
engine/include/arcbit/app/: Application.h  Window.h
engine/include/arcbit/assets/: AssetTypes.h  SpriteSheet.h  TextureManager.h
engine/include/arcbit/audio/: AudioManager.h
engine/include/arcbit/core/: Loc.h  Math.h
engine/include/arcbit/ecs/: AnimatorStateMachine.h  Components.h  Movement.h  World.h
engine/include/arcbit/input/: InputManager.h  InputTypes.h
engine/include/arcbit/physics/: AABB.h  BodyKind.h  Collider2D.h  CollisionLayers.h  DirectionArc.h  Narrowphase.h  PhysicsWorld.h  SpatialHash.h  Sweep.h  TileColliderRect.h
engine/include/arcbit/render/: Camera2D.h  Font.h  RenderDevice.h  RenderHandle.h  RenderThread.h  RenderTypes.h
engine/include/arcbit/scene/: Scene.h  WorldConfig.h
engine/include/arcbit/settings/: Settings.h
engine/include/arcbit/tilemap/: TileAtlas.h  TileDef.h  TileMap.h
engine/include/arcbit/ui/: AudioSettingsScreen.h  GraphicsSettingsScreen.h  HudScreen.h  InputRebindScreen.h  InputWidgets.h  MainMenuScreen.h  PauseMenuScreen.h  SplashScreen.h  UILoader.h  UIManager.h  UIRect.h  UIScreen.h  UISkin.h  UIWidget.h  Widgets.h
engine/shaders/: sdf.frag  sprite.vert  ui.frag  ui.vert
engine/src/: AnimatorStateMachine.cpp  Application.cpp  AudioManager.cpp  AudioSettingsScreen.cpp  Camera2D.cpp  DirectionArc.cpp  Font.cpp  GraphicsSettingsScreen.cpp  HudScreen.cpp  InputManager.cpp  InputRebindScreen.cpp  InputWidgets.cpp  Loc.cpp  MainMenuScreen.cpp  Narrowphase.cpp  PauseMenuScreen.cpp  PhysicsWorld.cpp  RenderThread.cpp  Scene.cpp  Settings.cpp  SpatialHash.cpp  SplashScreen.cpp  SpriteSheet.cpp  Sweep.cpp  Systems.cpp  TextureManager.cpp  TileAtlas.cpp  TileMap.cpp  UILoader.cpp  UIManager.cpp  UIScreen.cpp  UISkin.cpp  UIWidget.cpp  Widgets.cpp  Window.cpp  World.cpp
game/: CMakeLists.txt
game/assets/skins/: default.skin.json
game/assets/spritesheets/: player.json
game/assets/textures/Cute_Fantasy_Free/Animals/Chicken/: Chicken.json
game/assets/textures/Cute_Fantasy_Free/Animals/Pig/: Pig.json
game/assets/textures/Cute_Fantasy_Free/Enemies/: Skeleton.json  Slime_Green.json
game/assets/textures/Cute_Fantasy_Free/Outdoor decoration/: Oak_Tree.json
game/assets/tilemaps/: floor.tileatlas.json  grass.tileatlas.json  light_water.tileatlas.json  water.tileatlas.json
game/assets/ui/: widget_test.arcui
game/cmake/: CopyAssets.cmake
game/shaders/: forward.frag  forward.vert  quad.frag  quad.vert  sdf.vert  sprite.frag  sprite.vert  triangle.frag  triangle.vert
game/src/: ArcDemo.cpp  Common.cpp  Common.h  PhysicsDemo.cpp  TileMoveArcDemo.cpp  TileMoveDemo.cpp  WidgetTestScreen.cpp  WidgetTestScreen.h  WorldDemo.cpp  main.cpp
